feat: strengthen script-first recording flow with local reports and agent orchestrator

--- a/apps/api_gateway/ui/index.html
+++ b/apps/api_gateway/ui/index.html
@@ -46,6 +46,7 @@
         <div class="checks">
           <label><input id="transcribe" type="checkbox" /> Локальная транскрибация</label>
           <label><input id="uploadToAgent" type="checkbox" checked /> Отправить в pipeline</label>
+          <label><input id="localReport" type="checkbox" checked /> Локальный report (JSON/TXT)</label>
           <label><input id="autoOpen" type="checkbox" /> Открывать URL автоматически</label>
         </div>
         <div class="row controls">
