feat: complete P0 reliability block for script-first recorder

--- a/apps/api_gateway/ui/index.html
+++ b/apps/api_gateway/ui/index.html
@@ -43,6 +43,10 @@
             <input id="language" type="text" value="ru" />
           </label>
         </div>
+        <label class="field">
+          <span>Устройство записи (optional)</span>
+          <input id="inputDevice" type="text" placeholder="например: BlackHole 2ch" />
+        </label>
         <div class="checks">
           <label><input id="transcribe" type="checkbox" /> Локальная транскрибация</label>
           <label><input id="uploadToAgent" type="checkbox" checked /> Отправить в pipeline</label>
