--- a/apps/api_gateway/ui/index.html
+++ b/apps/api_gateway/ui/index.html
@@ -88,6 +88,7 @@
         <div class="row controls">
           <input id="meetingIdInput" type="text" placeholder="meeting_id" />
           <button id="loadMeeting" class="btn">Загрузить</button>
+          <button id="loadScorecard" class="btn">Scorecard</button>
           <button id="rebuildArtifacts" class="btn">Rebuild artifacts</button>
           <button id="openReportJson" class="btn">Report JSON</button>
           <button id="openReportTxt" class="btn">Report TXT</button>
@@ -100,6 +101,45 @@
           <span>Report (JSON)</span>
           <textarea id="reportJson" rows="10" readonly></textarea>
         </label>
+        <label class="field">
+          <span>Scorecard (JSON)</span>
+          <textarea id="scorecardJson" rows="10" readonly></textarea>
+        </label>
+      </section>
+
+      <section class="card card-wide">
+        <h2>Senior Compare & Manual Delivery</h2>
+        <label class="field">
+          <span>Meeting IDs для сравнения (через запятую)</span>
+          <input id="comparisonMeetingIds" type="text" placeholder="m-1,m-2,m-3" />
+        </label>
+        <div class="row controls">
+          <button id="runComparison" class="btn btn-main">Сравнить</button>
+        </div>
+        <label class="field">
+          <span>Comparison report (JSON)</span>
+          <textarea id="comparisonJson" rows="10" readonly></textarea>
+        </label>
+
+        <div class="row">
+          <label class="field">
+            <span>Sender account</span>
+            <select id="senderAccount"></select>
+          </label>
+          <label class="field">
+            <span>Recipients (comma-separated)</span>
+            <input id="manualRecipients" type="text" placeholder="senior1@x.com,senior2@x.com" />
+          </label>
+        </div>
+        <label class="field">
+          <span>Сообщение (optional)</span>
+          <textarea id="manualMessage" rows="4" placeholder="Короткий комментарий для сеньоров"></textarea>
+        </label>
+        <div class="row controls">
+          <button id="manualSend" class="btn">Отправить вручную</button>
+          <span id="manualSendState" class="pill">idle</span>
+        </div>
+        <p id="manualSendMeta" class="meta">Ручная отправка отключена до выбора встречи и получателей.</p>
       </section>
     </main>
 
