--- a/apps/api_gateway/ui/index.html
+++ b/apps/api_gateway/ui/index.html
@@ -89,9 +89,12 @@
           <input id="meetingIdInput" type="text" placeholder="meeting_id" />
           <button id="loadMeeting" class="btn">Загрузить</button>
           <button id="loadScorecard" class="btn">Scorecard</button>
+          <button id="loadDecision" class="btn">Decision</button>
           <button id="rebuildArtifacts" class="btn">Rebuild artifacts</button>
           <button id="openReportJson" class="btn">Report JSON</button>
           <button id="openReportTxt" class="btn">Report TXT</button>
+          <button id="openBriefTxt" class="btn">Senior Brief TXT</button>
+          <button id="openBriefHtml" class="btn">Senior Brief HTML</button>
         </div>
         <label class="field">
           <span>Enhanced transcript</span>
@@ -104,6 +107,14 @@
         <label class="field">
           <span>Scorecard (JSON)</span>
           <textarea id="scorecardJson" rows="10" readonly></textarea>
+        </label>
+        <label class="field">
+          <span>Decision (JSON)</span>
+          <textarea id="decisionJson" rows="8" readonly></textarea>
+        </label>
+        <label class="field">
+          <span>Senior brief (TXT)</span>
+          <textarea id="seniorBriefTxt" rows="8" readonly></textarea>
         </label>
       </section>
 
